--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,11 @@ edition = "2021"
 
 elf = "0.7.4"
 wasm-bindgen = "0.2"
+web-sys = { version = "0.3.69", features = ['Document',
+  'Element',
+  'HtmlElement',
+  'Node',
+  'Window',] }
 
 
 [lib]
